[package]
name = "zk-auth"
version = "0.1.0"
authors = ["Uacias <uaciasdev@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.197", features = ["derive"] }

dioxus = { version = "0.5", features = ["fullstack"] }

# Debug

dioxus-logger = "0.5.0"

simple_logger = "4.2.0"
tracing-wasm = "0.2.1"
tracing = "0.1.40"
tracing-subscriber = "0.3.17"
futures = "0.3.30"
tokio = { version = "1.38.0", features = ["full"] }
futures-util = "0.3.30"
once_cell = "1.19.0"
server_fn = { git = "https://github.com/leptos-rs/leptos.git", rev = "21e507e1a46e2278efca6ba746abe26e672465b5" }

[features]
default = []
server = ["dioxus/axum"]
web = ["dioxus/web"]
